[gd_scene load_steps=5 format=3 uid="uid://4nw0yi4ljoan"]

[ext_resource type="Script" path="res://Scripts/card_ui.gd" id="1_x2gfm"]
[ext_resource type="Texture2D" uid="uid://bcrjv4mvtkhhy" path="res://Arte/UI/panelInset_beige.png" id="2_t8m1t"]
[ext_resource type="Texture2D" uid="uid://dpy4swi4ev48t" path="res://Arte/axe.png" id="3_scbg2"]

[sub_resource type="LabelSettings" id="LabelSettings_3q2k2"]
font_size = 18
font_color = Color(0, 0, 0, 1)
outline_size = 2

[node name="Node2D" type="Node2D"]
script = ExtResource("1_x2gfm")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(2.12649, 32)
scale = Vector2(2.32334, 3.12766)
texture = ExtResource("2_t8m1t")

[node name="Image" type="Sprite2D" parent="."]
scale = Vector2(4, 3.798)
texture = ExtResource("3_scbg2")

[node name="LabelName" type="Label" parent="."]
offset_left = -103.0
offset_top = -101.0
offset_right = 89.0
offset_bottom = -75.0
text = "Knife lvl2"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LabelDescription" type="Label" parent="."]
offset_left = -87.0
offset_top = 73.0
offset_right = 106.0
offset_bottom = 176.0
text = "Description yes"
label_settings = SubResource("LabelSettings_3q2k2")
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
offset_left = -129.0
offset_top = -111.0
offset_right = 112.0
offset_bottom = 194.0
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
